# megalib-py

./: Cargo.toml  example.py  megalib.pyi  pyproject.toml  readme.md
src/: lib.rs
