[package]
name = "megalib-py"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-2.0-or-later"
repository = "https://github.com/11philip22/megalib-py"
keywords = ["mega", "mega.nz", "cloud-storage", "file-transfer"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "megalib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
megalib = { path = "../megalib" }
tokio = { version = "1", features = ["full"] }
